# fortran-sqlcipher

./: CMakeLists.txt  README.md  makefile
src/: makefile  sqlcipher_interfaces.f90  sqlcipher_interfaces_wrappers.f90
test/: CMakeLists.txt  makefile  test_sqlcipher.f90
